# GGI-POLICY

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-push.yml  lifecycle.yml  validate.yml
crosswalks/: .pages  cis.md  hipaa.md  nist-800-171.md  nist-800-53.md  nist-csf.md  soc2.md
deploy/: README.md
docs/: crosswalks  glossary  index.md
docs/_hooks/: policy_page.py
docs/_stylesheets/: extra.css
glossary/: terms.md
policies/: .pages
policies/applications/: .pages
policies/business-continuity/: .pages
policies/data/: .pages
policies/endpoints/: .pages
policies/human-resources/: .pages
policies/identity-and-access/: .pages  group-naming.md  group-naming.rules.yaml
policies/incident-response/: .pages
policies/meta/: .pages  ai-agent-contract.md  ai-agent-contract.rules.yaml  doc-framework.md  doc-framework.rules.yaml
policies/network/: .pages
policies/privacy/: .pages
policies/security-operations/: .pages
policies/vendor-and-third-party/: .pages
schemas/: exception.schema.json  framework-controls.json  framework-controls.schema.json  policy-frontmatter.schema.json  policy-rules.schema.json  role-team-mapping.schema.json  role-team-mapping.yaml
templates/: exception.md  policy.md  policy.rules.yaml
tools/ggi_policy/: __init__.py  __main__.py  cli.py  codeowners.py  controls.py  crosswalks.py  domains.py  enforce.py  io.py  lifecycle.py  manifests.py  repo.py  result.py  role_team_map.py  site.py  teams.py
(+101 files in other folders)
